# hypermarket-clob

./: Cargo.toml  README.md  build.rs  docker-compose.yml
benches/: matching.rs
config/: example.yaml
proto/: engine.proto
src/: lib.rs  main.rs  market_registry.rs  metrics.rs  orderbook.rs  types.rs
src/bus/: mod.rs  nats.rs
src/config/: mod.rs
src/engine/: mod.rs  router.rs  shard.rs
src/matching/: batch.rs  mod.rs  orderbook.rs
src/models/: mod.rs
src/persistence/: snapshot.rs  wal.rs
src/risk/: mod.rs
tests/: matching.rs  open_order_limits.rs  proptest.rs  simulation.rs  unit.rs
