[package]
name = "hypermarket-clob"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
async-nats = "0.38"
blake3 = "1"
bytes = "1"
lru = "0.12"
bincode = "1"
clap = { version = "4", features = ["derive"] }
config = "0.14"
dashmap = "6"
metrics = "0.22"
metrics-exporter-prometheus = "0.12"
parking_lot = "0.12"
prost = "0.12"
prost-types = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
slab = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1"

[build-dependencies]
prost-build = "0.12"

[[bench]]
name = "matching"
harness = false
